Update login link in signup.html to point to index.html

--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
       </div>
       <button type="submit">Signup</button>
     </form>
-    <p>Already have an Account? <a href="login.html">login</a> </p>
+    <p>Already have an Account? <a href="index.html">login</a> </p>
   </div>
 </body>
 </html>
